--- a/css/styles.css
+++ b/css/styles.css
@@ -19,15 +19,35 @@ p {
   margin: 0;
 }
 
+button {
+  cursor: pointer;
+}
+
+address {
+  font-style: normal;
+}
+
+img {
+  display: block;
+}
+
 .body {
   font-family: "Roboto";
   color: var(--color-blac);
 }
 
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  outline: auto;
+} 
+
 .feader-nav-link {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.14; 
   letter-spacing: 0.02em;
   text-decoration: none;
   color: #212121;
@@ -38,6 +58,8 @@ p {
 }
 
 .logo {
+  padding-top: 24px;
+  padding-bottom: 25px; 
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -51,6 +73,7 @@ p {
   color: #212121;
 }
 .list {
+  margin: 0 auto;
   list-style: none;
   text-decoration: none;
 }
@@ -74,6 +97,8 @@ a.list:visited {
   background-color: var(--background-origin);
 }
 .hero-title {
+  padding-top: 200px;
+  padding-bottom: 280px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -85,21 +110,28 @@ a.list:visited {
 .hero-btn {
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
+  display: block;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
   background-color: #2196f3;
   color: #ffffff;
+  margin: 0 auto;
   font-family: "Roboto";
 }
 .section {
+}
+.list-features{
+  padding-top: 94px;
+  margin: 0 auto;
+
 }
 
 .features {
   color: var(--color-blac);
 }
 .features-text {
+  padding-top: 10px;
   font-size: 14px;
   line-height: 2;
   letter-spacing: 0.03em;
@@ -115,6 +147,7 @@ a.list:visited {
 .doing {
 }
 .doing-title {
+  padding-top: 94px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -124,7 +157,14 @@ a.list:visited {
 .team {
   background-color: #f5f4fa;
 }
+.list-doing {
+
+}
+.container-team{
+  margin: 0 auto;
+}
 .team-title {
+  padding-top: 94px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
