--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ p {
 }
 
 button {
+  
   cursor: pointer;
 }
 
@@ -37,13 +38,22 @@ img {
 }
 
 .container {
+
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: auto;
+  box-sizing: border-box;
+  
 } 
+.feader{
+  outline: 1px solid #F5F4FA;
+}
+.feader-conteiner{
+  padding-top: 24px;
+  padding-bottom: 25px;
 
+}
 .feader-nav-link {
   font-weight: 500;
   font-size: 14px;
@@ -73,7 +83,8 @@ img {
   color: #212121;
 }
 .list {
-  margin: 0 auto;
+  padding: 0 0;
+  margin: 0 0;
   list-style: none;
   text-decoration: none;
 }
@@ -93,11 +104,15 @@ a.list:visited {
 .feader-contact:focus {
   color: var(--first-btn-color);
 }
+.fero-container{
+  padding-bottom: 200px;
+}
 .hero {
   background-color: var(--background-origin);
 }
 .hero-title {
   padding-top: 200px;
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -107,6 +122,7 @@ a.list:visited {
   color: var(--first-title-color);
 }
 .hero-btn {
+  margin-top: 30px;
   font-size: 16px;
   line-height: 1.87;
   display: block;
@@ -160,16 +176,19 @@ a.list:visited {
 }
 .list-doing {
   padding-bottom: 94px;
+  margin: 0;
 
 }
 .list-team{
   padding-bottom: 94px;
+  margin: 0;
 }
 .container-team{
-  margin: 0 auto;
-}
+
+ }
 .team-title {
   padding-top: 94px;
+  padding-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -193,6 +212,8 @@ a.list:visited {
 }
 
 .container-footer{
+  padding-bottom: 60px;
+  padding-top: 60px;
 
 
 }
@@ -209,8 +230,7 @@ a.list:visited {
   color: var(--first-btn-color);
 }
 .footer-logo {
-  padding-top: 60px;
-  padding-bottom: 161px;
+
   font-family: "Raleway";
   font-style: normal;
   font-size: 26px;
@@ -224,6 +244,7 @@ a.list:visited {
 }
 .footer-address {
   padding-top: 20px;
+  padding-bottom: 9px;
     font-size: 14px;
   line-height: 2;
   letter-spacing: 0.03em;
@@ -233,14 +254,25 @@ a.list:visited {
 }
 .footer-link{
   padding-top: 9px;
-  padding-bottom: 60px;
+  padding-bottom: 9px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 
 }
+.end{
+
+  padding-bottom: 60px;
+}
 /*portfolio*/
+.container-portfolio{
+padding-bottom: 94px;
+padding-top: 94px;
+}
+.list-portfolio{
+  padding-bottom: 34px;
+}
 .portfolio-btn {
   font-weight: 500;
   font-size: 16px;
@@ -264,6 +296,10 @@ a.list:visited {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--second-title-color);
+}
+.list-items{
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .portfolio-text {
   font-size: 16px;
