--- a/css/styles.css
+++ b/css/styles.css
@@ -50,11 +50,23 @@ img {
   outline: 1px solid #F5F4FA;
 }
 .feader-conteiner{
-  padding-top: 24px;
-  padding-bottom: 25px;
+  display: flex;
+
 
 }
+.list-feader{
+  margin-right: 344px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: flex;
+
+}
+
+
 .feader-nav-link {
+  margin-right: 50px;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14; 
@@ -62,12 +74,16 @@ img {
   text-decoration: none;
   color: #212121;
 }
+.nav-end{
+  margin-right: 0;
+}
 .feader-nav-link:hover,
 .feader-nav-link:focus {
   color: var(--first-btn-color);
 }
 
 .logo {
+  margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 25px; 
   font-size: 26px;
@@ -92,6 +108,9 @@ a.list:visited {
   color: #2196f3;
 }
 .feader-contact {
+  margin-right: 50px;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -99,13 +118,18 @@ a.list:visited {
   text-decoration: none;
   color: #757575;
 }
+.contact-end{
+  margin-right: 0;
+}
 .feader-contact:hover,
 .feader-contact:active,
 .feader-contact:focus {
   color: var(--first-btn-color);
 }
 .fero-container{
+  
   padding-bottom: 200px;
+  
 }
 .hero {
   background-color: var(--background-origin);
@@ -125,6 +149,7 @@ a.list:visited {
   margin-top: 30px;
   font-size: 16px;
   line-height: 1.87;
+  border-radius: 4px;
   display: block;
   align-items: center;
   text-align: center;
@@ -137,9 +162,11 @@ a.list:visited {
 .section {
 }
 .list-features{
+  margin-right: 30px;
   padding-top: 94px;
   padding-bottom: 94px;
   margin: 0 auto;
+  display: flex;
 
 }
 
@@ -160,10 +187,13 @@ a.list:visited {
   text-transform: uppercase;
   color: var(--second-title-color);
 }
+.features-items{
+  margin-right: 30px;
+}
 .doing {
 }
 .doing-title {
-  padding-top: 94px;
+ 
   padding-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
@@ -175,13 +205,19 @@ a.list:visited {
   background-color: #f5f4fa;
 }
 .list-doing {
+  
   padding-bottom: 94px;
   margin: 0;
+  display: flex;
 
 }
 .list-team{
   padding-bottom: 94px;
   margin: 0;
+  display: flex;
+}
+.doing-items{
+  margin-right: 30px;
 }
 .container-team{
 
@@ -195,7 +231,13 @@ a.list:visited {
   letter-spacing: 0.03em;
   color: var(--second-title-color);
 }
+.team-items{
+  margin-right: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+}
 .team-second-title {
+  padding-top: 30px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -204,6 +246,8 @@ a.list:visited {
   color: var(--color-blac);
 }
 .team-text {
+  padding-bottom: 30px;
+  padding-top: 10px;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
@@ -220,6 +264,9 @@ a.list:visited {
 .footer {
   color: var(--first-title-color);
   background-color: var(--background-origin);
+}
+.list-footer{
+  padding-left: 0;
 }
 .footer-link {
   text-decoration: none;
@@ -271,17 +318,23 @@ padding-bottom: 94px;
 padding-top: 94px;
 }
 .list-portfolio{
+  justify-content: center;
   padding-bottom: 34px;
+  display: flex;
+  
 }
 .portfolio-btn {
+  margin-top: 30px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  border-radius: 4px;
+  border: #2196f3;
   display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  background-color: #ffffff;
+  background-color: #F5F4FA;
   color: #212121;
   cursor: pointer;
   font-family: "Roboto";
@@ -292,14 +345,18 @@ padding-top: 94px;
   background-color: #2196f3;
 }
 .portfolio-items {
+  display: flex;
+  flex-wrap: wrap;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--second-title-color);
 }
 .list-items{
-  padding-top: 30px;
-  padding-bottom: 30px;
+  outline: 1px solid #EEEEEE;
+    padding-bottom: 30px;
+    margin-left: 30px;
+    margin-bottom: 30px;
 }
 .portfolio-text {
   font-size: 16px;
