--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@ p {
 }
 
 button {
-  
   cursor: pointer;
 }
 
@@ -38,30 +37,24 @@ img {
 }
 
 .container {
-
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
   box-sizing: border-box;
-  
-} 
-.feader{
-  outline: 1px solid #F5F4FA;
 }
-.feader-conteiner{
+.feader {
+  outline: 1px solid #f5f4fa;
+}
+.feader-conteiner {
   display: flex;
-
-
 }
-.list-feader{
+.list-feader {
   margin-right: 344px;
   padding-top: 32px;
   padding-bottom: 32px;
   display: flex;
-
 }
-
 
 .feader-nav-link {
   margin-right: 50px;
@@ -69,12 +62,12 @@ img {
   padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.14; 
+  line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
   color: #212121;
 }
-.nav-end{
+.nav-end {
   margin-right: 0;
 }
 .feader-nav-link:hover,
@@ -85,7 +78,7 @@ img {
 .logo {
   margin-right: 93px;
   padding-top: 24px;
-  padding-bottom: 25px; 
+  padding-bottom: 25px;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -118,7 +111,7 @@ a.list:visited {
   text-decoration: none;
   color: #757575;
 }
-.contact-end{
+.contact-end {
   margin-right: 0;
 }
 .feader-contact:hover,
@@ -126,10 +119,8 @@ a.list:visited {
 .feader-contact:focus {
   color: var(--first-btn-color);
 }
-.fero-container{
-  
+.fero-container {
   padding-bottom: 200px;
-  
 }
 .hero {
   background-color: var(--background-origin);
@@ -146,10 +137,15 @@ a.list:visited {
   color: var(--first-title-color);
 }
 .hero-btn {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 32px;
+  padding-right: 32px;
   margin-top: 30px;
   font-size: 16px;
   line-height: 1.87;
   border-radius: 4px;
+  border: 0px;
   display: block;
   align-items: center;
   text-align: center;
@@ -161,13 +157,12 @@ a.list:visited {
 }
 .section {
 }
-.list-features{
+.list-features {
   margin-right: 30px;
   padding-top: 94px;
   padding-bottom: 94px;
   margin: 0 auto;
   display: flex;
-
 }
 
 .features {
@@ -187,13 +182,12 @@ a.list:visited {
   text-transform: uppercase;
   color: var(--second-title-color);
 }
-.features-items{
+.features-items {
   margin-right: 30px;
 }
 .doing {
 }
 .doing-title {
- 
   padding-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
@@ -205,23 +199,20 @@ a.list:visited {
   background-color: #f5f4fa;
 }
 .list-doing {
-  
-  padding-bottom: 94px;
-  margin: 0;
-  display: flex;
-
-}
-.list-team{
   padding-bottom: 94px;
   margin: 0;
   display: flex;
 }
-.doing-items{
+.list-team {
+  padding-bottom: 94px;
+  margin: 0;
+  display: flex;
+}
+.doing-items {
   margin-right: 30px;
 }
-.container-team{
-
- }
+.container-team {
+}
 .team-title {
   padding-top: 94px;
   padding-bottom: 50px;
@@ -231,10 +222,11 @@ a.list:visited {
   letter-spacing: 0.03em;
   color: var(--second-title-color);
 }
-.team-items{
+.team-items {
   margin-right: 30px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-second-title {
   padding-top: 30px;
@@ -255,17 +247,15 @@ border-radius: 0px 0px 4px 4px;
   color: var(--text-item);
 }
 
-.container-footer{
+.container-footer {
   padding-bottom: 60px;
   padding-top: 60px;
-
-
 }
 .footer {
   color: var(--first-title-color);
   background-color: var(--background-origin);
 }
-.list-footer{
+.list-footer {
   padding-left: 0;
 }
 .footer-link {
@@ -277,7 +267,6 @@ border-radius: 0px 0px 4px 4px;
   color: var(--first-btn-color);
 }
 .footer-logo {
-
   font-family: "Raleway";
   font-style: normal;
   font-size: 26px;
@@ -292,39 +281,40 @@ border-radius: 0px 0px 4px 4px;
 .footer-address {
   padding-top: 20px;
   padding-bottom: 9px;
-    font-size: 14px;
+  font-size: 14px;
   line-height: 2;
   letter-spacing: 0.03em;
   text-decoration: none;
   font-style: normal;
   color: var(--first-title-color);
 }
-.footer-link{
+.footer-link {
   padding-top: 9px;
   padding-bottom: 9px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-
 }
-.end{
-
+.end {
   padding-bottom: 60px;
 }
 /*portfolio*/
-.container-portfolio{
-padding-bottom: 94px;
-padding-top: 94px;
+.container-portfolio {
+  padding-bottom: 94px;
+  padding-top: 94px;
 }
-.list-portfolio{
+.list-portfolio {
   justify-content: center;
   padding-bottom: 34px;
   display: flex;
-  
 }
 .portfolio-btn {
-  margin-top: 30px;
+  margin-right: 8px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 22px;
+  padding-left: 22px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -334,7 +324,7 @@ padding-top: 94px;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   color: #212121;
   cursor: pointer;
   font-family: "Roboto";
@@ -346,25 +336,29 @@ padding-top: 94px;
 }
 .portfolio-items {
   display: flex;
+  gap: 30px;
   flex-wrap: wrap;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--second-title-color);
 }
-.list-items{
-  outline: 1px solid #EEEEEE;
-    padding-bottom: 30px;
-    margin-left: 30px;
-    margin-bottom: 30px;
+.list-items {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #eeeeee;
+  padding-bottom: 20px;
 }
 .portfolio-text {
+  padding-left: 24px;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--text-item);
 }
 .portfolio-title {
+  padding-top: 20px;
+  padding-left: 24px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
